--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,12 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_architect_view">ArchitectView</string>
     <string name="title_activity_geo_camera">GeoCameraActivity</string>
+    <string name="title_activity_campus_info">CampusInfo</string>
+    <string name="title_activity_content">Content</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
