--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_site_info">SiteInfo</string>
+    <string name="title">Event title: </string>
+    <string name="date">Date &amp; Time: </string>
+    <string name="desc">Description: </string>
+    <string name="more_info">More Info</string>
+    <string name="title_activity_events">EventsActivity</string>
 
 </resources>
