--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="desc">Description: </string>
     <string name="more_info">More Info</string>
     <string name="title_activity_events">EventsActivity</string>
+    <string name="title_activity_directions">Directions</string>
 
 </resources>
